--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "~4.9.0"
+    "express": "~4.9.0",
+    "socket.io": "~1.3.5"
   }
 }
